# TRACE-ML

./: .env.example  .gitignore  AUDIT_REPORT.md  BACKEND_CODE_ANALYSIS.md  BEST_CAPTURE_IMPLEMENTATION.md  Building Frontend Via Workflows.md  CAMERA_CONTROL_TEST_GUIDE.md  CODEBASE_ARCHITECTURE_MAP.md  DATABASE_SCHEMA_DETAILED_ANALYSIS.md  ENHANCEMENT_PLAN.md  Encryption Algorithm Recommendation for TRACE AML.md  GUI_TESTING_GUIDE.md  LICENSE  README.md  TRACE_AML_FULL_SYSTEM_TEST_PROMPT.md  Trace ml improvement report v2.md  audit.py  check_person.py  cleanup_database.py  collect_faces.py  config.demo.yaml  config.strict.yaml  config.yaml  data-storage.md  db_guard.py  diag.py  diag2.py  diag3.py  diag4.py  docker-compose.evolution.yml  fix_data_summaries.py  fix_prc001.py  location-api.md  main.py  manage_db.py  mockup.html  pyproject.toml  recognize.py  recognize_dlib.py  referenece.html  (+11 more)
config/: config.demo.yaml  config.desktop.yaml  config.strict.yaml  config.yaml
docs/: INCIDENT_DEDUPLICATION_FIX.md  TRACE_AML_ARCHITECTURE_AUDIT_2026-03-25.md  TRACE_AML_BACKEND_UI_READINESS_ROADMAP_2026-04-04.md  TRACE_AML_FRONTEND_BACKEND_ALIGNMENT_REPORT_2026-04-03.md  TRACE_AML_PALANTIR_INSPIRED_SUGGESTION_REPORT_2026-03-25.md  TRACE_AML_SERVICE_LAYER_ROADMAP_2026-04-04.md  demo_sequence.md  desktop-build.md
electron/: main.js  package-lock.json  package.json  preload.js  runtime.js  splash.html  welcome.html
packaging/: trace_aml_backend.spec
scripts/: build_backend.ps1  collect_faces_dlib.py  generate_vault_key.py  manage_db.py  migrate_enrollment_to_vault.py  (+5 more)
(+150 files in other folders)
