[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-ml"
version = "3.0.0"
description = "TRACE-ML v3 CLI-first facial recognition demo stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3,<0.13.0",
  "rich>=13.7.1,<14.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "loguru>=0.7.2,<0.8.0",
  "numpy>=1.26.4,<3.0.0",
  "opencv-contrib-python>=4.10.0.84,<5.0.0.0",
  "insightface>=0.7.3,<0.8.0",
  "onnxruntime>=1.24.4,<2.0.0",
  "lancedb>=0.30.0,<0.31.0",
  "duckdb>=1.4.3,<2.0.0",
  "pyarrow>=20.0.0,<22.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<0.7.0",
  "black>=24.8.0,<25.0.0",
]

[project.scripts]
trace-ml = "trace_ml.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trace_ml*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
